--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -49,10 +49,10 @@ const navLinks = [
       href="/"
       class="flex items-center justify-center h-[3.1rem]
              px-[clamp(0.9rem,1.2vw,1.2rem)] rounded-full
-             backdrop-blur-xl shadow-lg 
+             backdrop-blur-xl shadow-lg z-75
              hover:bg-white/30 dark:hover:bg-black/30 transition-all duration-300 ease-out shrink-0"
     >
-      <span class="font-semibold text-[clamp(1.08rem,1.35vw,1.45rem)] whitespace-nowrap hover:scale-105 duration-500">
+      <span class="font-semibold text-[clamp(1.08rem,1.35vw,1.45rem)] whitespace-nowrap hover:scale-105 duration-500 Z-90">
         Coughy.net
       </span>
     </a>
