added content and fiction handler

--- a/src/components/fa.header.astro
+++ b/src/components/fa.header.astro
@@ -3,15 +3,15 @@ import Hamburger from "./Hamburger.astro";
 import ModeToggle from "./ModeToggle.astro";
 
 const navLinks = [
-  ["Home", "/"],
-  ["Wiki", "/wiki"],
-  ["Blog", "/blog"],
-  ["Fiction", "/fiction"],
-  ["Poetry", "/poetry"],
-  ["Projects", "/projects"],
-  ["Research", "/research"],
-  ["Partners", "/partners"],
-  ["About", "/about"],
+  ["خانه", "/"],
+  ["ویکی", "/wiki"],
+  ["بلاگ", "/blog"],
+  ["داستان", "/fiction"],
+  ["شعر", "/poetry"],
+  ["پروژه ها", "/projects"],
+  ["تحقیقات", "/research"],
+  ["همکاران", "/partners"],
+  ["درباره", "/about"],
 ];
 ---
 
