--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -7,7 +7,7 @@ const pageTitle = "My Astro Learning Blog";
 const allPosts = await getCollection("blog");
 ---
 
-<BaseLayout pageTitle={pageTitle}>
+<BaseLayout>
   <section class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8 py-16 text-white">
     <header class="mb-10 text-center">
       <h1 class="text-4xl font-extrabold tracking-tight mb-3 bg-clip-text text-transparent bg-linear-to-r from-blue-400 to-purple-500">
